--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       
         <div class="right">
           <a class="button colorblind" href="#">Daltónico</a>
-          <a class="button show-tutorial" href="#">Mostrar explicación</a>
+          <a class="button show-tutorial" href="#">Reiniciar explicación</a>
           <a class="button show-about" href="#">Acerca de</a>
         </div>
       
