--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src="lodash.min.js"></script>
   <script src="jquery.js"></script>
   <script src="velocity.min.js"></script>
-  <script src="src/app2.js"></script>
+  <script src="src/app.js"></script>
   <!--<script src="prefixfree.min.js"></script>-->
   <script src="http://localhost:35729/livereload.js"></script>
   <link rel="stylesheet" href="style.css">
