Add GitHub link

--- a/index.html
+++ b/index.html
@@ -228,6 +228,8 @@
       
       <p>Esta aplicación ha sido desarrollada por <a href="https://github.com/ntrrgc/"><em>Juan Luis Boya</em></a> en la <a href="http://usal.es/webusal/">Universidad de Salamanca</a>.</p>
 
+      <p>El código fuente de esta aplicación está disponible en <a href="https://github.com/ntrrgc/dhondt-vis">GitHub</a>.</p>
+
     </div>
   </div></div></div>
 </div>
