--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta name="author" content="Juan Luis Boya">
   <meta name="description" content="Una explicación intuitiva del método D'Hondt basada en visualización de información">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src="d3.min.js"></script>
-  <script src="lodash.min.js"></script>
-  <script src="jquery.js"></script>
-  <script src="velocity.min.js"></script>
+  <script src="lib/d3.min.js"></script>
+  <script src="lib/lodash.min.js"></script>
+  <script src="lib/jquery.js"></script>
+  <script src="lib/velocity.min.js"></script>
   <script src="src/app.js"></script>
   <link rel="stylesheet" href="style.css">
 
