--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     </p>
     <ul>
       <li>se venda el número de escaños exacto</li>
-      <li>ningún partido que pueda comprar un escaño se queda sin poder hacerlo</li>
+      <li>ningún partido que pueda comprar un escaño se quede sin poder hacerlo</li>
     </ul>
     
     <button class="next">Continuar</button>
