--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>El método D'Hondt: Cómo los votos se convierten en escaños</title>
-  <meta name="author" content="Juan Luis Boya">
+  <meta name="author" content="Alicia Boya García">
   <meta name="description" content="Una explicación intuitiva del método D'Hondt basada en visualización de información">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="lib/d3.min.js"></script>
@@ -236,7 +236,7 @@
       <p>La explicación está basada en el paper <a href="http://www.ucl.ac.uk/~ucahhwi/dhondt.pdf"><em>The D'Hondt Method Explained</em></a> de <a href="http://www.ucl.ac.uk/~ucahhwi/"><em>Helen J. Wilson</em></a>.</p>
       
       <p>Esta aplicación ha sido desarrollada por
-        <a href="http://ntrrgc.me/"><em>Juan Luis Boya García</em></a>
+        <a href="http://ntrrgc.me/"><em>Alicia Boya García</em></a>
         en la <a href="http://usal.es/webusal/">Universidad de Salamanca</a>.</p>
 
       <p>El código fuente de esta aplicación está disponible en <a href="https://github.com/ntrrgc/dhondt-vis">GitHub</a>.</p>
